--- a/LightTube/Views/Home/Feed.cshtml
+++ b/LightTube/Views/Home/Feed.cshtml
@@ -2,47 +2,27 @@
 @model LightTube.Contexts.FeedContext
 @{
 	ViewData["Title"] = "Subscription Feed";
+	ViewData["DisableOldCss"] = true;
+	ViewData["SelectedGuideItem"] = "subs";
 }
 
-<div class="subscription-container">
-	<div class="subscription-channels-container">
-		<h1>Subscribed Channels</h1>
-		<div class="subscription-channels">
-			@foreach (LTChannel channel in Model.Channels)
-			{
-				<div class="list-channel">
-					<img class="channel-avatar" src="@channel.IconUrl" alt="Channel Avatar">
-					<div class="info">
-						<a href="/channel/@channel.ChannelId" class="title">@channel.Name</a>
-						<div>@channel.Subscribers</div>
-					</div>
-					<div class="subscribe-button-container">
-						<button style="display: none" class="subscribe-button" data-cid="@channel.ChannelId"></button>
-					</div>
-				</div>
-			}
-		</div>
-	</div>
-	<div>
-		<h1>Subscription Feed</h1>
-		<div class="subscription-videos">
-			@foreach (FeedVideo video in Model.Videos)
-			{
-				<div class="grid-video" onclick="window.location = '/watch?v=@video.Id'">
-					<div class="thumbnail" style="background-image: url('@video.Thumbnail')"></div>
-					<div class="info">
-						<a href="/watch?v=@video.Id" class="title">@video.Title</a>
-						<div>
-							<a href="/channel/@video.ChannelId">@video.ChannelName</a>
-						</div>
-						<div>
-							<span>@video.ViewCount views</span>
-							<span>•</span>
-							<span>@video.PublishedDate.Humanize(DateTimeOffset.Now)</span>
-						</div>
+<div class="rich-video-grid">
+	@foreach (FeedVideo video in Model.Videos)
+	{
+		<div class="video">
+			<a href="/watch?v=@video.Id" class="thumbnail" style="background-image: url('@video.Thumbnail')"></a>
+			<a href="/channel/@video.ChannelId" class="avatar"><img></a>
+			<div class="info">
+				<a href="/watch?v=@video.Id" class="title max-lines-2">@video.Title</a>
+				<div>
+					<a href="/channel/@video.ChannelId">@video.ChannelName</a>
+					<div>
+						<span>@video.ViewCount views</span>
+						<span>•</span>
+						<span>@video.PublishedDate.Humanize(DateTimeOffset.Now)</span>
 					</div>
 				</div>
-			}
+			</div>
 		</div>
-	</div>
+	}
 </div>
