Fix video background being red

--- a/LightTube/wwwroot/css/videojs/tube.css
+++ b/LightTube/wwwroot/css/videojs/tube.css
@@ -272,7 +272,7 @@
     font-size: 14px
 }
 
-.video-js .vjs-play-progress, .video-js {
+.video-js .vjs-play-progress {
     background-color: #cc181e
 }
 
