Fix error page links, add /feed/explore and disable redirecting to /feed/subscriptions if user is logged in

--- a/LightTube/Views/Home/Index.cshtml
+++ b/LightTube/Views/Home/Index.cshtml
@@ -7,6 +7,8 @@
 		["og:description"] = "An alternative, privacy respecting front end for YouTube",
 	};
 	ViewData["Title"] = "Home Page";
+	ViewData["DisableOldCss"] = true;
+	ViewData["SelectedGuideItem"] = "home";
 }
 
 <div style="text-align: center">
